# article-grpc-http-integration

./: .env.local  Cargo.toml  Makefile  README.md
bins/grpc/: Cargo.toml
bins/grpc/src/: main.rs
bins/grpc/src/services/: basic.rs
bins/http_server/: Cargo.toml
bins/http_server/src/: main.rs  openapi.rs
bins/http_server/src/controllers/: basic.rs
bins/http_server/src/routes/: basic.rs
bins/http_server/src/viewmodels/: basic.rs
protofiles/v1/: basic.proto
protos/: Cargo.toml  build.rs
protos/src/v1/: basic.rs
